--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <div class="topnav">
         <a href="contact.html">CONTACT</a>
-        <a href="about.html">ABOUT</a>
+        <a href="about.html">ABOUT US</a>
         <a href="home.html">HOME</a>
     </div>
 
