--- a/pages/about.html
+++ b/pages/about.html
@@ -38,8 +38,10 @@
 </head>
 <body>
     <div class="topnav">
+        <a href="sign_up.html">SIGN UP</a>
         <a href="contact.html">CONTACT</a>
-        <a href="about.html">ABOUT</a>
+        <a href="about.html">ABOUT US</a>
+        <a href="login.html">LOGIN</a>
         <a href="home.html">HOME</a>
     </div>
 </body>
