--- a/pages/home.html
+++ b/pages/home.html
@@ -33,32 +33,18 @@
           background-attachment: fixed;  
           background-size: cover;
         }
-                
-/* .button { */
-            /* border: none; */
-            /* color: white; */
-            /* padding: 10px 16px; */
-            /* text-align: center; */
-            /* text-decoration: none; */
-            /* display: inline-block; */
-            /* font-size: 16px; */
-            /* margin: 4px 2px; */
-            /* cursor: pointer; */
-        /* } */
-        
-/* .button {background-color: rgb(240, 213, 92);} */
-
-
         </style>
 </head>
 <body>
     <div class="topnav">
-        <a href="contact.html">CONTACT</a>
-        <a href="about.html">ABOUT</a>
-        <a href="home.html">HOME</a>
+      <a href="sign_up.html">SIGN UP</a>
+      <a href="contact.html">CONTACT</a>
+      <a href="about.html">ABOUT US</a>
+      <a href="login.html">LOGIN</a>
+      <a href="home.html">HOME</a>
     </div>
    <br><br><br><br><br><br>
-        <div style="color: whitesmoke; text-align: right;">
+        <div style="color: whitesmoke; text-align: right; margin-right: 50px;">
             <h2>GIVE A HELPING HAND TO THOSE WHO NEED IT!</h2>
             <p>When a child gets to food, it can change just about everything.</p>
           </div>
