--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,12 +37,17 @@
         }
     </style>
 </head>
+
 <body>
     <div class="topnav">
+        <a href="sign_up.html">SIGN UP</a>
         <a href="contact.html">CONTACT</a>
-        <a href="about.html">ABOUT</a>
+        <a href="about.html">ABOUT US</a>
+        <a href="login.html">LOGIN</a>
         <a href="home.html">HOME</a>
+
     </div>
-    
+
 </body>
+
 </html>
