--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -40,9 +40,12 @@
 
 <body>
     <div class="topnav">
+        <a href="sign_up.html">SIGN UP</a>
         <a href="contact.html">CONTACT</a>
         <a href="about.html">ABOUT US</a>
+        <a href="login.html">LOGIN</a>
         <a href="home.html">HOME</a>
+
     </div>
 
 </body>
