--- a/pages/login.html
+++ b/pages/login.html
@@ -30,7 +30,7 @@
         }
 
         body {
-            background-image: url('asset/img/bgimage.png');
+            background-image: url('../asset/img/bgimage.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
