--- a/pages/home.html
+++ b/pages/home.html
@@ -28,7 +28,7 @@
   color: black;
 }
         body {
-          background-image: url('asset/img/bgimage.png');
+          background-image: url('../asset/img/bgimage.png');
           background-repeat: no-repeat;
           background-attachment: fixed;  
           background-size: cover;
