--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,6 +27,10 @@
             background-color: #D1D0EC;
             color: black;
         }
+        .topnav a.active{
+            background-color:#afaed2;
+            opacity: 1;
+        }
 
         body {
             background-image: url('../asset/img/bgimage.png');
@@ -38,8 +42,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="sign_up.html">SIGN UP</a>
-        <a href="contact.html">CONTACT</a>
+        <a  class="active" href="contact.html">CONTACT</a>
         <a href="about.html">ABOUT US</a>
         <a href="login.html">LOGIN</a>
         <a href="home.html">HOME</a>
