--- a/pages/home.html
+++ b/pages/home.html
@@ -28,6 +28,10 @@
   background-color:#D1D0EC;
   color: black;
 }
+.topnav a.active{
+  background-color:#afaed2;
+  opacity: 1;
+}
         body {
           background-image: url('../asset/img/bgimage1.png');
           background-repeat: no-repeat;
@@ -46,18 +50,17 @@
             cursor: pointer;
         }
         
-.button {background-color: lightcoral;}
+.button {background-color: rgb(209, 77, 77);}
 
 
         </style>
 </head>
 <body>
     <div class="topnav">
-      <a href="sign_up.html">SIGN UP</a>
       <a href="contact.html">CONTACT</a>
       <a href="about.html">ABOUT US</a>
       <a href="login.html">LOGIN</a>
-      <a href="home.html">HOME</a>
+      <a  class="active" href="home.html">HOME</a>
     </div>
    <br><br><br><br><br><br>
         <div style="color: whitesmoke; text-align:center; ">
