--- a/pages/index.html
+++ b/pages/index.html
@@ -57,10 +57,10 @@
 </head>
 <body>
     <div class="topnav">
-      <a href="contact.html">CONTACT</a>
-      <a href="about.html">ABOUT US</a>
-      <a href="login.html">LOGIN</a>
-      <a  class="active" href="home.html">HOME</a>
+      <a href="./contact.html">CONTACT</a>
+      <a href="./about.html">ABOUT US</a>
+      <a href="./login.html">LOGIN</a>
+      <a  class="active" href="./home.html">HOME</a>
     </div>
    <br><br><br><br><br><br>
         <div style="color: whitesmoke; text-align:center; ">
@@ -69,7 +69,7 @@
           </div>
           
             <button class="button">
-              DISCOVER MORE<a href="contact.html">...</a></button>
+              DISCOVER MORE<a href="./contact.html">...</a></button>
        <!-- <div style="text-align: right;">
         <input type="submit" value="DISCOVER MORE">
        </div>  -->
