--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,10 +42,10 @@
 </head>
 <body>
     <div class="topnav">
-        <a  class="active" href="contact.html">CONTACT</a>
-        <a href="about.html">ABOUT US</a>
-        <a href="login.html">LOGIN</a>
-        <a href="home.html">HOME</a>
+        <a  class="active" href="./contact.html">CONTACT</a>
+        <a href="./about.html">ABOUT US</a>
+        <a href="./login.html">LOGIN</a>
+        <a href="./home.html">HOME</a>
     </div>
 </body>
 </html>
