--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   opacity: 1;
 }
         body {
-          background-image: url('../asset/img/bgimage1.png');
+          background-image: url('./asset/img/bgimage1.png');
           background-repeat: no-repeat;
           background-attachment: fixed;  
           background-size: cover;
