--- a/pages/about.html
+++ b/pages/about.html
@@ -91,7 +91,7 @@
         <a href="./contact.html">CONTACT</a>
         <a class="./active" href="about.html">ABOUT US</a>
         <a href="./login.html">LOGIN</a>
-        <a href="./home.html">HOME</a>
+        <a href="./index.html">HOME</a>
     </div>
     <div class="about-section">
         <h1>About Us</h1>
