--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 </head>
 <body>
     <div class="topnav">
-      <a href="./contact.html">CONTACT</a>
-      <a href="./about.html">ABOUT US</a>
-      <a href="./login.html">LOGIN</a>
-      <a  class="active" href="./home.html">HOME</a>
+      <a href="./pages/contact.html">CONTACT</a>
+      <a href="./pages/contact.html">ABOUT US</a>
+      <a href="./pages/login.html">LOGIN</a>
+      <a  class="active" href="./index.html">HOME</a>
     </div>
    <br><br><br><br><br><br>
         <div style="color: whitesmoke; text-align:center; ">
