--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
         <a  class="active" href="./contact.html">CONTACT</a>
         <a href="./about.html">ABOUT US</a>
         <a href="./login.html">LOGIN</a>
-        <a href="./index.html">HOME</a>
+        <a href="../index.html">HOME</a>
     </div>
 </body>
 </html>
