--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   opacity: 1;
 }
         body {
-          background-image: url('./asset/img/bgimage1.png');
+          background-image: url('./asset/img/img1.png');
           background-repeat: no-repeat;
           background-attachment: fixed;  
           background-size: cover;
@@ -69,7 +69,7 @@
           </div>
           
             <button class="button">
-              DISCOVER MORE<a href="./contact.html">...</a></button>
+              DISCOVER MORE<a href="./pages/contact.html">...</a></button>
        <!-- <div style="text-align: right;">
         <input type="submit" value="DISCOVER MORE">
        </div>  -->
