--- a/pages/login.html
+++ b/pages/login.html
@@ -167,7 +167,7 @@ span.psw {
         <a href=".login.html">CONTACT</a>
         <a href="./about.html">ABOUT US</a>
         <a class="active" href="./login.html">LOGIN</a>
-        <a href="./index.html">HOME</a>
+        <a href="../index.html">HOME</a>
 
     </div>
     <h1 style="margin: left 20px; color:rgb(26, 28, 90)">WE RISE BY LIFTING OTHERS</h1>
