--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,7 @@
         }
 
         body {
-            background-image: url('../asset/img/bgimage2.png');
+            background-image: url('../asset/img/img1.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
