--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   opacity: 1;
 }
         body {
-          background-image: url('./asset/img/img1.png');
+          background-image: url('./asset/img/img2.png');
           background-repeat: no-repeat;
           background-attachment: fixed;  
           background-size: cover;
@@ -63,7 +63,7 @@
       <a  class="active" href="./index.html">HOME</a>
     </div>
    <br><br><br><br><br><br>
-        <div style="color: whitesmoke; text-align:center; ">
+        <div style="color: black; text-align:center; ">
             <h2>GIVE A HELPING HAND TO THOSE WHO NEED IT!</h2>
             <p>When a child gets to food, it can change just about everything.</p>
           </div>
