--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           background-image: url('./asset/img/img2.png');
           background-repeat: no-repeat;
           background-attachment: fixed;  
-          background-size: cover;
+          background-size: 100% 100%;
         }
         .button {
             border: none;
