--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
-            margin: 25px 700px;
+            margin: 55px 710px;
             cursor: pointer;
         }
         
-.button {background-color: rgb(209, 77, 77);}
+.button {background-color: rgb(141, 131, 175);}
 
 
         </style>
@@ -63,7 +63,7 @@
       <a  class="active" href="./index.html">HOME</a>
     </div>
    <br><br><br><br><br><br>
-        <div style="color: black; text-align:center; ">
+        <div style="color: rgb(40, 37, 37); text-align:center; font-size: 27px; ">
             <h2>GIVE A HELPING HAND TO THOSE WHO NEED IT!</h2>
             <p>When a child gets to food, it can change just about everything.</p>
           </div>
