--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
   width: 33%;
   margin-bottom: 40px;
   padding: 0 8px;
-  margin-top: 80px;
+ 
 
 }
 
@@ -57,8 +57,8 @@
 .about-section {
   padding: 30px;
   text-align: center;
-  background-color: lightsalmon;
-  color: white;
+  background-color: rgb(218, 182, 236);
+  color: rgb(31, 31, 31);
 }
 
 /* .button {
@@ -94,8 +94,8 @@
         <a href="../index.html">HOME</a>
     </div>
     <div class="about-section">
-        <h1>About Us</h1>
-        <h2>NO ONE HAS EVER BECOME POOR BY GIVING</h2>
+        <h2>About Us</h2>
+        <h1>NO ONE HAS EVER BECOME POOR BY GIVING</h1>
         <p>Money is not the only commodity that is fun to give.</p>
         <p>We can give time,our experties,our love,or simply give a smile.</p>
         <p>what does that cost?</p>
@@ -104,19 +104,19 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="../asset/img/image1.png" style="width: 85%;margin-left: 35px;">
+            <img src="../asset/img/img4.png" style="width: 85%; margin-left: 35px;">
           </div>
         </div>
       
         <div class="column">
           <div class="card">
-            <img src="../asset/img/image2.png"  style="width: 85%; margin-left: 35px;">
+            <img src="../asset/img/img3.png"  style="width: 85%; margin-left: 35px;">
           </div>
         </div>
         
         <div class="column">
           <div class="card">
-            <img src="../asset/img/image3.png" style="width: 85%;margin-left: 35px;">
+            <img src="../asset/img/img5.png" style="width: 85%;margin-left: 35px;">
           </div>
         </div>
       </div>
