--- a/pages/login.html
+++ b/pages/login.html
@@ -37,7 +37,7 @@
             background-image: url('../asset/img/img1.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-size: cover;
+            background-size: 100% 100%S;
         }
         body {font-family: Arial, Helvetica, sans-serif;}
         h1{
